--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
+<!--
     <link rel="stylesheet" href="main.CSS">
     <script src="script.js" defer></script>
+-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="Information">
@@ -22,11 +26,11 @@
         </p>
         <div class="image-selector">
             See more pictures here (Projects, Sorority, Shark club): 
-            <button id="volleyball-btn">A.O.E. playing volleyball</button>
-            <button id="shark-btn">Shark tagging</button>
-            <button id="car-btn">Ardunio car</button>
-            <button id="submarine-btn">Submarine</button>
-            <button id="bridge-btn">Wooden bridge</button>
+            <button id="volleyball-btn" class="btn btn-outline-primary btn-sm">A.O.E. playing volleyball</button>
+            <button id="shark-btn" class="btn btn-outline-primary btn-sm">Shark tagging</button>
+            <button id="car-btn" class="btn btn-outline-primary btn-sm">Ardunio car</button>
+            <button id="submarine-btn" class="btn btn-outline-primary btn-sm">Submarine</button>
+            <button id="bridge-btn" class="btn btn-outline-primary btn-sm">Wooden bridge</button>
         </div>
         <div class="image-gallery">
             <img class="displayed-image" id="volleyball" src="aoe_volleyball.jpg" alt="Sorority playing volleyball" style="width: 600px;">
