--- a/p2/index.html
+++ b/p2/index.html
@@ -1,1 +1,268 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>My Resume - Start Bootstrap Theme</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #6f42c1;" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Alexandria Machacon</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/grad_image.jpg" alt="My graduation picture" /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#activies">Extracurricular Activities</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#coursework">Relevant coursework</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Alexandria
+                        <span class="text-primary">Machacon</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        · Cooper City, FL 33328 · (754) 777-2320 ·
+                        <a href="mailto:amachacon2022@fau.edu">amachacon2022@fau.edu</a>
+                    </div>
+                    <p class="lead mb-5">Hello everyone! I’m Alexandria Machacon, a junior at Florida Atlantic University, where I’m majoring in Data Science and Analytics. I’m also proud to be a member of Alpha Omega Epsilon (A.O.E.), a sorority dedicated to empowering women in STEM. At 20 years old, I currently work at Spirit Halloween, where I enjoy bringing a bit of festive fun to our community.</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="http://www.linkedin.com/in/alexandria-machacon-linked-in1"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Theflawlessone"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://profile.indeed.com/p/9v9y1fb"><i class="fa-solid fa-file"></i></a>
+                        <a class="social-icon" href="https://discordapp.com/users/1194101568115576853/"><i class="fa-brands fa-discord"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <table class="table table-group-divider table-bordered table-responsive">
+                                <thead>
+                                    <tr>
+                                        <th>Employer</th>
+                                        <th>Position(s)</th>
+                                        <th>Location(s)</th>
+                                        <th>Dates</th>
+                                        <th>Description</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Outback steakhouse</td>
+                                        <td>Take-Away</td>
+                                        <td>2725 S University Dr, Davie, FL 33328</td>
+                                        <td>June 2023 - December 2023</td>
+                                        <td>I prepped toppings, collected and labeled food, bagged the food and handled transactions with customers.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Another Broken Egg</td>
+                                        <td>Server</td>
+                                        <td>508 Via De Palmas Suite 76, Boca Raton, FL 33432</td>
+                                        <td>January 2023 - April 2023</td>
+                                        <td>I served guests by listening to their order, inputting it into the system, and ensuring that all their food and drinks are made correctly and brought to in a timely manner.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Chili's</td>
+                                        <td>Server, Bartender, Food runner, To-go Specialist</td>
+                                        <td>21769 State Road 7, Boca Raton, FL 33428, and 13610 Pines Blvd, Pembroke Pines, FL 33027</td>
+                                        <td>November 2021 - December 2022</td>
+                                        <td>I started in To-go, where I collect, package, and distribute food to the customers. I also worked in food running where I transferred food from the kitchen to customers in the restaurant. I bartended and served by listening to customers, inserting their orders into the system correctly, and made their drinks.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spirit Halloween</td>
+                                        <td>Team Member</td>
+                                        <td>4931 Sheridan St Hollywood FL 33021 and 8864 FL-84 F, Davie, FL 33324</td>
+                                        <td>July 2021 - November 2021 and August 2024 - November 2024</td>
+                                        <td>I assisted guests with their search, I handled transactions, and I distributed merchandise to the correct section.</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Florida Atlantic University</h3>
+                            <div class="subheading mb-3">Bachelor of Business and Engineering</div>
+                            <div>Data science and analytics - Python Track </div>
+                            <p>GPA: 3.4</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - June 2026</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">South Broward High School</h3>
+                            <div class="subheading mb-3">Marine science Magnet Program and Cambridge program</div>
+                            <p>GPA: 3.4</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - June 2022</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-file-csv"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-file-powerpoint"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-file-word"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-github"></i></li>
+                    </ul>
+                    <div class="subheading mb-3">Workflow</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Comprehension, Understanding the task
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Communication, Team-work
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Presentation, Powerpoints
+                        </li>
+                   </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Aside from being a full-time student, with a part-time job, I enjoy most of my time relaxing in nature. I enjoy going to different parks and walking through the scenery and going swimming at the beach.</p>
+                    <p class="mb-0">When the weather is bad, then I find myself tucked in bed, either reading my favorite manga author Junji Ito or watching horror anime. I also enjoy in baking sweets, like cookies and brownies and going to the gym.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Extracurricular Activities-->
+            <section class="resume-section" id="activies">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Extracurricular Activities</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-handshake-angle"></i></span>
+                            Voluntary work - Feeding South Florida, food drives, and tutoring.
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-newspaper"></i></span>
+                            Clubs - Boxing, shark, business, coral, A.O.E., and journalism
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-wallet"></i></span>
+                             Programs / Scholarships- AICE/ Cambridge Diploma, and Bright Futures
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-id-card"></i></span>
+                            Licenses - Boating, hunting, food handling, and driver’s
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Relevant coursework-->
+            <section class="resume-section" id="coursework">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Relevant coursework</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                            Introduction to Calculus with Applicants
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                            Introduction to Engineering
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                             College Algebra
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                            Introduction to Philosophy
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                            Aice Environmental Management
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                            Aice Business
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                            Introduction Programming in Python
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-solid fa-book-bookmark"></i></span>
+                            Data Management Analysis with excel
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Gallery-->
+            <section class="resume-section" id="gallery">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Gallery</h2>
+                    <h3 class="mb-0">Sorority and club events</h3>
+                    <img class="img-fluid figure-img" src="assets/img/aoe_volleyball.jpg" alt="Sorority playing volleyball" />
+                    <img class="img-fluid figure-img" src="assets/img/sorority.jpg" alt="My sorority" />
+                    <img class="img-fluid figure-img" src="assets/img/Shark_club.jpg" alt="Me shark tagging" />
+                    <img class="img-fluid figure-img" src="assets/img/shark_club2.jpg" alt="Me shark tagging" />
+                    <img class="img-fluid figure-img" src="assets/img/shark_club5.jpg" alt="Me shark tagging" />
+                    <h3 class="mb-0">Engineering projects</h3>
+                    <img class="img-fluid figure-img" src="assets/img/arduino_car2.jpg" alt="My engineering Arduino project car" />
+                    <img class="img-fluid figure-img" src="assets/img/submarine3.jpg" alt="My engineering project submarine" />
+                    <img class="img-fluid figure-img" src="assets/img/bridge.jpg" alt="My enginering project wooden bridge" />
+                </div>
+            </section>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
