--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             This HTML code showcases my online resume. It includes my contact details, GPA, and links to my GitHub and Indeed profiles. You'll find information about my education, work experience, relevant coursework, extracurricular activities, and skills. I've also included interactive buttons to display images of my projects and activities, like volunteering and engineering work. The page is designed to give a clear overview of my academic and professional background.
                         </p>
                         <div class="button-row">
-                            <a href="p1/p1/index.html">
+                            <a href="Internet_Computing_Projects/p1/index.html">
                                 <button type="button" class="btn btn-secondary">p1</button>
                             </a>
                         </div>
