--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             This HTML code creates a simple statistical analysis tool with a user-friendly interface. It includes fields for users to input three numbers and calculates the maximum, minimum, mean, median, and range. The design uses Bootstrap for responsive styling, with a side navigation bar and a form to capture inputs. A custom JavaScript function processes the input data and displays the results below the form. The page uses CSS for layout and responsive adjustments, ensuring the tool works across different screen sizes. The tool is designed to be intuitive and easy to use for basic statistical calculations.
                         </p>
                         <div class="button-row">
-                            <a href="p3/p3/index.html">
+                            <a href="/Internet_Computing_Projects/p3/index.html">
                                 <button type="button" class="btn btn-light">p3</button>
                             </a>
                         </div>
@@ -77,7 +77,7 @@
                             This HTML and JavaScript code creates a Halloween-themed Tic Tac Toe game. The page features a stylish, responsive layout built with Bootstrap and includes a background image and spooky design elements. The game logic is implemented in jQuery, where a 3x3 grid is dynamically generated and used for players to take turns marking cells with either "X" or "O". The game checks for a winner or a tie after each move and prompts the user accordingly. If a player wins or the game ends in a tie, the board resets for a new round. The design is enhanced with a Halloween theme, including a pumpkin image and eerie styling.
                         </p>
                         <div class="button-row">
-                            <a href="p4/p4/index.html">
+                            <a href="/Internet_Computing_Projects/p4/index.html">
                                 <button type="button" class="btn btn-dark">p4</button>
                             </a>
                         </div>
