--- a/p2/index.html
+++ b/p2/index.html
@@ -248,15 +248,15 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Gallery</h2>
                     <h3 class="mb-0">Sorority and club events</h3>
-                    <img class="img-fluid figure-img" src="assets/img/aoe_volleyball.jpg" alt="Sorority playing volleyball" />
-                    <img class="img-fluid figure-img" src="assets/img/sorority.jpg" alt="My sorority" />
-                    <img class="img-fluid figure-img" src="assets/img/Shark_club.jpg" alt="Me shark tagging" />
-                    <img class="img-fluid figure-img" src="assets/img/shark_club2.jpg" alt="Me shark tagging" />
-                    <img class="img-fluid figure-img" src="assets/img/shark_club5.jpg" alt="Me shark tagging" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/aoe_volleyball.jpg" alt="Sorority playing volleyball" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/sorority.jpg" alt="My sorority" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/Shark_club.jpg" alt="Me shark tagging" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/shark_club2.jpg" alt="Me shark tagging" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/shark_club5.jpg" alt="Me shark tagging" />
                     <h3 class="mb-0">Engineering projects</h3>
-                    <img class="img-fluid figure-img" src="assets/img/arduino_car2.jpg" alt="My engineering Arduino project car" />
-                    <img class="img-fluid figure-img" src="assets/img/submarine3.jpg" alt="My engineering project submarine" />
-                    <img class="img-fluid figure-img" src="assets/img/bridge.jpg" alt="My enginering project wooden bridge" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/arduino_car2.jpg" alt="My engineering Arduino project car" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/submarine3.jpg" alt="My engineering project submarine" />
+                    <img class="img-fluid figure-img" src="/Internet_Computing_Projects/p2/bridge.jpg" alt="My enginering project wooden bridge" />
                 </div>
             </section>
         </div>
