--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link href="bootstrap.css" rel="stylesheet">
     <style>
         .card {
-            max-width: 20rem;
-            margin-bottom: 20px; /* To add space below each card */
+            width: 20rem;
+            margin-bottom: 20px;
+            height: 1030px;
+        }
+        .btn {
+            border: 2px solid #ffffff;
         }
     </style>
 </head>
@@ -17,7 +21,7 @@
         <h2 class="text-center mb-4">My Projects</h2>
         <div class="row">
             <!-- First Project Card -->
-            <div class="col-3 mb-3"> <!-- col-3 will take up 3 of the 12 available columns in a row (4 cards per row) -->
+            <div class="col-3 mb-3"> 
                 <div class="card text-white bg-secondary">
                     <div class="card-header">First Project</div>
                     <div class="card-body">
@@ -25,6 +29,9 @@
                         <p class="card-text">
                             This HTML code showcases my online resume. It includes my contact details, GPA, and links to my GitHub and Indeed profiles. You'll find information about my education, work experience, relevant coursework, extracurricular activities, and skills. I've also included interactive buttons to display images of my projects and activities, like volunteering and engineering work. The page is designed to give a clear overview of my academic and professional background.
                         </p>
+                        <a href="/Internet_Computing_Projects/p1/index.html">
+                            <img src="/Internet_Computing_Projects/p1/ss.png" alt="My Resume" class="img-fluid mb-3" />
+                        </a>
                         <div class="button-row">
                             <a href="/Internet_Computing_Projects/p1/index.html">
                                 <button type="button" class="btn btn-secondary">p1</button>
@@ -42,6 +49,9 @@
                         <p class="card-text">
                             This HTML code showcases my personal resume. It highlights my academic background, work experience, and extracurricular activities. The page includes sections like About, Experience, Education, Skills, and Interests, providing a clear overview of my journey. I’ve also added links to my LinkedIn, GitHub, and Indeed profiles. The Gallery section features images from my sorority events and engineering projects. Built with Bootstrap, the design is responsive and looks great on all devices.
                         </p>
+                        <a href="/Internet_Computing_Projects/p2/index.html">
+                            <img src="/Internet_Computing_Projects/p2/p2_screenshot.png" alt="My Resume using a bootstrap template" class="img-fluid mb-3" />
+                        </a>
                         <div class="button-row">
                             <a href="/Internet_Computing_Projects/p2/index.html">
                                 <button type="button" class="btn btn-danger">p2</button>
@@ -59,6 +69,9 @@
                         <p class="card-text">
                             This HTML code creates a simple statistical analysis tool with a user-friendly interface. It includes fields for users to input three numbers and calculates the maximum, minimum, mean, median, and range. The design uses Bootstrap for responsive styling, with a side navigation bar and a form to capture inputs. A custom JavaScript function processes the input data and displays the results below the form. The page uses CSS for layout and responsive adjustments, ensuring the tool works across different screen sizes. The tool is designed to be intuitive and easy to use for basic statistical calculations.
                         </p>
+                        <a href="/Internet_Computing_Projects/p3/index.html">
+                            <img src="/Internet_Computing_Projects/p3/p3_ss.png" alt="Calculator screenshot" class="img-fluid mb-3" />
+                        </a>
                         <div class="button-row">
                             <a href="/Internet_Computing_Projects/p3/index.html">
                                 <button type="button" class="btn btn-light">p3</button>
@@ -76,6 +89,9 @@
                         <p class="card-text">
                             This HTML and JavaScript code creates a Halloween-themed Tic Tac Toe game. The page features a stylish, responsive layout built with Bootstrap and includes a background image and spooky design elements. The game logic is implemented in jQuery, where a 3x3 grid is dynamically generated and used for players to take turns marking cells with either "X" or "O". The game checks for a winner or a tie after each move and prompts the user accordingly. If a player wins or the game ends in a tie, the board resets for a new round. The design is enhanced with a Halloween theme, including a pumpkin image and eerie styling.
                         </p>
+                        <a href="/Internet_Computing_Projects/p4/index.html">
+                            <img src="/Internet_Computing_Projects/p4/ss.png" alt="Halloween Tic-Tac-Toe Game" class="img-fluid mb-3" />
+                        </a>
                         <div class="button-row">
                             <a href="/Internet_Computing_Projects/p4/index.html">
                                 <button type="button" class="btn btn-dark">p4</button>
